--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "build": "echo 'No build necessary for the backend server'"
   },
   "author": "",
   "license": "ISC",
